server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-test
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: websocket-test
