server/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: websocket-test
spec:
  subdomain: ws-echo-server
  port:
    targetPort: 8000
  to:
    kind: Service
    name: websocket-test
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
